[gd_scene load_steps=4 format=3 uid="uid://b3bvim3bxn2k"]

[ext_resource type="Texture2D" uid="uid://bm668dbrf8202" path="res://assets/pngs/ingredient_booksprite.png" id="1_crtqs"]
[ext_resource type="Script" path="res://scripts/ingredient_book.gd" id="1_fcxms"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r736l"]
size = Vector2(21.2209, 31.2791)

[node name="Ingredient Book" type="Node2D"]
script = ExtResource("1_fcxms")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_crtqs")

[node name="Control" type="Control" parent="Sprite2D"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(2.28, 2.28)

[node name="Label" type="Label" parent="Sprite2D/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Generic Potion
_Ingredients_
1 pineapple
 2 noodles"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(5, -11)
scale = Vector2(9.03002, 9.03002)
shape = SubResource("RectangleShape2D_r736l")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
